# puma

./: .gitignore  CMakeLists.txt
include/: gui.hpp  interpolator.hpp  interpolator_scene.hpp  inverse_kinematics.hpp  mock_data.hpp
include/glfw_impl/: common.hpp
resources/: heightmap.frag  heightmap.tesc  heightmap.tese  heightmap.vert  model.frag  paths.frag  paths.vert
resources/programs/paths2/: 1.k16  2.f12  3.f10  4.k08  5.k01  fake.k01
src/: CMakeLists.txt  glfw_impl.cpp  gui.cpp  interpolator.cpp  interpolator_scene.cpp  inverse_kinematics.cpp  main.cpp
